# Vector

./: README.md  pyproject.toml  test_results.txt
brinks_box_trading.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/: default.yaml
scripts/: backtest.py  live.py
src/: __init__.py  brinks_box.py  config.py  engine.py  indicators.py  models.py  news.py  portfolio.py  risk.py  session.py  signals.py  vectors.py
src/backtest/: analytics.py  data_loader.py  runner.py
src/dashboard/: app.py
src/dashboard/static/: app.js  index.html  style.css
src/live/: alpaca_adapter.py  broker.py  feed.py
tests/: test_backtest.py  test_brinks_box.py  test_engine.py  test_indicators.py  test_risk.py  test_session.py  test_signals.py  test_vectors.py
